--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,15 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+      <script>
+      !function(){var e="rest.happierleads.com/v3/script?clientId=iWrUNMKuspN7S8Db6TKgQB&version=3.0.0",
+      t=document.createElement("script");window.location.protocol.split(":")[0];
+      t.src="https://"+e;var c=document.getElementsByTagName("script")[0];
+      t.onload = function(){ new Happierleads.default };
+      c.parentNode.insertBefore(t,c)}();
+      </script>
+     
 </head>
 <body>
   <app-root></app-root>
